--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital@0;1&display=swap');
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url();
+  font-family: 'Righteous', cursive;
+  font-family: 'Roboto', sans-serif;
+  background-color: #0d0d0f;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
